fix purchase page spacing

--- a/src/assets/scss/core/layout/_exchange.scss
+++ b/src/assets/scss/core/layout/_exchange.scss
@@ -1,4 +1,5 @@
 .exchange.section {
+    padding-top: 0 !important;
     margin-bottom: 36px;
     .container {
         display: flex;
